--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="wrapper">
             <div id="home">
                 <div class="main">
-                    <img src="/img/50719eef-fb4f-4618-b86f-df013679a8bf.jpg" alt="myfoto">
+                    <img src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=740&t=st=1664193751~exp=1664194351~hmac=5d0d6b2b4b81a0fa6c4bd77a872ce2402433506d55dd0de1f6e4ed3447779e05" alt="myfoto">
                     <p class="title">Hi i'm Maulana</p>
                 </div>
             </div>
