--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <title>Myprofile. </title>
 </head>
@@ -29,7 +31,7 @@
         <div class="wrapper">
             <div id="home">
                 <div class="main">
-                    <img src="img/50719eef-fb4f-4618-b86f-df013679a8bf.jpg">
+                    <img src="/img/50719eef-fb4f-4618-b86f-df013679a8bf.jpg" alt="myfoto">
                     <p class="title">Hi i'm Maulana</p>
                 </div>
             </div>
@@ -44,20 +46,51 @@
                 </div>
                 <div class="card texxt-center">
                 <h1 class="title-card"></h1>
-                <a href="https://wa.me/6285220005105"><i class="fa-brands fa-whatsapp fa-8x icon"></i></a>
-                <p class="description">maulana</p>
+                <a href="https://wa.me/62895397096742"><i class="fa-brands fa-whatsapp fa-8x icon"></i></a>
+                <p class="description">Maulana</p>
                 </div>
                 <div class="card texxt-center">
                 <h1 class="title-card"></h1>
-                <i class="fa-brands fa-discord fa-8x icon"></i>
+                <a href="https://discord.gg/MBqnjmCS2t"><i class="fa-brands fa-discord fa-8x icon"></i></a>
                 <p class="description">you.#5765</p>
                 </div>
             </div>
         </div>
-        <div id="footer">
-            <p> assalamualaikum kawan</p>
+        <!---------------->
+        <div class="center-body">
+            <div class="loader-triangle-3">
+                <svg id="triangle" width="50px" height="50px" viewbox="-3 -4 39 39">
+                    <polygon fill="transparent" stroke="#ffeb3b" stroke-width="2" points="16,0 32,32 0,32">
+                    </polygon>
+                </svg>
+            </div>
+        </div>    
+        <!---------------->
+
+        <!----------------
+        <div id="cntr">
+            <div id="flip">
+                <div>
+                    <div>PUTRA</div>
+                </div>
+                <div>
+                    <div>Maulana</div>
+                </div>
+            </div>
         </div>
-        
+        ---->
+
+        <!----------------
+
+        <a href="" class="btn">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Click here</a>
+        ---->
+
+    </div>     
     <script src="script.js"></script>
 
 </body>
