--- a/index.html
+++ b/index.html
@@ -38,22 +38,24 @@
             </div>
             <div id="about">
                 <p>Hello, I'm Maulana Putra Pamungkas 
-                </br>who is usually called Maulana and I'm 15 years old. I come from the city of Pati, Central Java, Indonesia. And I am now in grade 10 at SMK TUNAS HARAPAN PATI. I started liking Web Programming at the age of 14, when I was in the 9th grade of SMP Negeri 1 Trangkil. I am interested in learning Web Programming because I interest about technology and Programming, and it has continued since 1 year ago until now. And now, I have been able to learn and explore the Programming Language at my own pace</p>
+                </br>who is usually called Maulana and I'm 15 years old.I come from the city of Pati, Central Java, Indonesia. And I am now in grade 10 at SMK TUNAS HARAPAN PATI. I started liking Web Programming at the age of 14, when I was in the 9th grade of SMP Negeri 1 Trangkil. I am interested in learning Web Programming because I interest about technology and Programming, and it has continued since 1 year ago until now. And now, I have been able to learn and explore the Programming Language at my own pace
+                </p>
             </div>
             <div id="contact">
+                <h1 class="title-card">Click Icon!!</h1>
                 <div class="card texxt-center">
                 <h1 class="title-card"></h1>
-                <a href="https://www.instagram.com/invites/contact/?i=10pzzqswk1ii6&utm_content=f0dymmm"><i class="fa-brands fa-instagram fa-8x icon"></i></a>
+                <a href="https://www.instagram.com/invites/contact/?i=10pzzqswk1ii6&utm_content=f0dymmm"><i class="fa-brands fa-instagram fa-6x icon"></i></a>
                 <p class="description">maulanaputra.28</p>
                 </div>
                 <div class="card texxt-center">
                 <h1 class="title-card"></h1>
-                <a href="https://wa.me/62895397096742"><i class="fa-brands fa-whatsapp fa-8x icon"></i></a>
+                <a href="https://wa.me/62895397096742"><i class="fa-brands fa-whatsapp fa-6x icon"></i></a>
                 <p class="description">Maulana</p>
                 </div>
                 <div class="card texxt-center">
                 <h1 class="title-card"></h1>
-                <a href="https://discord.gg/MBqnjmCS2t"><i class="fa-brands fa-discord fa-8x icon"></i></a>
+                <a href="https://discord.gg/MBqnjmCS2t"><i class="fa-brands fa-discord fa-6x icon"></i></a>
                 <p class="description">you.#5765</p>
                 </div>
             </div>
