--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div id="about">
                 <p>Hello, I'm Maulana Putra Pamungkas 
-                </br>who is usually called Maulana and I'm 15 years old.I come from the city of Pati, Central Java, Indonesia. And I am now in grade 10 at SMK TUNAS HARAPAN PATI. I started liking Web Programming at the age of 14, when I was in the 9th grade of SMP Negeri 1 Trangkil. I am interested in learning Web Programming because I interest about technology and Programming, and it has continued since 1 year ago until now. And now, I have been able to learn and explore the Programming Language at my own pace
+                </br>who is usually called Maulana and I'm 15 years old.I come from Pati, Central Java, Indonesia. And I am now in grade 10 at SMK TUNAS HARAPAN PATI. I started liking Web Programming at the age of 14, when I was in the 9th grade of SMP Negeri 1 Trangkil. I am interested in learning Web Programming because I interest about technology and Programming, and it has continued since 1 year ago until now. And now, I have been able to learn and explore the Programming Language at my own pace
                 </p>
             </div>
             <div id="contact">
