--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="wrapper">
             <div id="home">
                 <div class="main">
-                    <img src="img/50719eef-fb4f-4618-b86f-df013679a8bf.jpg" alt="Myfto">
+                    <img src="img/50719eef-fb4f-4618-b86f-df013679a8bf.jpg" alt="Myfoto">
                     <p class="title">Hi i'm Maulana</p>
                 </div>
             </div>
